# smux

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  TODO.md  flake.nix
.github/workflows/: ci.yml  publish-crates.yml  release.yml  update-homebrew-tap.yml
assets/: smux-skill.md
docs/: configuration.md  design.md  distribution.md  projects.md  smux-config.5  templates.md
schemas/: smux-config.schema.json  smux-project.schema.json  smux-template.schema.json
scripts/: package-release.sh
src/: app.rs  cli.rs  config.rs  docs.rs  doctor.rs  folder_search.rs  fzf.rs  github.rs  lib.rs  main.rs  process.rs  project_export.rs  session.rs  skill.rs  templates.rs  tmux.rs  ui.rs  util.rs  zoxide.rs
tests/: cli.rs
