[package]
name = "smux"
version = "0.1.0"
edition = "2024"
description = "Small Rust CLI for tmux session selection and creation"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
