[package]
name = "smux"
version = "0.1.0"
edition = "2024"
description = "Small Rust CLI for tmux session selection and creation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Aietes/smux"
homepage = "https://github.com/Aietes/smux"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
which = "8.0.2"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
