[package]
name = "smux-cli"
version = "0.2.0"
edition = "2024"
description = "Small Rust CLI for tmux session selection and creation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Aietes/smux"
homepage = "https://github.com/Aietes/smux"

[lib]
name = "smux"

[[bin]]
name = "smux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
toml = "1.1.2"
which = "8.0.4"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
